syntax = "proto3";

option java_package = "com.quizlet.local.datastore.models.metering";
option java_multiple_files = true;

message MeteringInfoStore {
  int32 numEvents = 1;
  int32 threshold = 2;
  int32 eventType = 3;
  int64 resourceId = 4;
  int64 userId = 5;
  int32 reason = 6;
}

message UserMeteringInfoStore {
  map<string, MeteringInfoStore> data = 1;
}